Add all buttons of site and fix problem

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400&display=swap" rel="stylesheet">
     <title>Static Template</title>
   </head>
   <body>
-
+    <button class="allbutton button1">Get Started</button>
+    <button class="allbutton button2">Get Free Estimate</button>
+    <button class="allbutton button3"></button>
+    <button class="allbutton button4">Connect With us</button>
   </body>
 </html>
