--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <title>Static Template</title>
   </head>
   <body>
-    <button class="allbutton button1">Get Started</button>
-    <button class="allbutton button2">Get Free Estimate</button>
-    <button class="allbutton button3"></button>
-    <button class="allbutton button4">Connect With us</button>
+    <button class="allbutton button-dark">Get Started</button>
+    <button class="allbutton button-dark">Get Free Estimate</button>
+    <button class="allbutton button-light"></button>
+    <button class="allbutton button-arrow-round">Connect With us</button>
   </body>
 </html>
