fix many problen izza Marianu Dzividzinskoi

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>Static Template</title>
   </head>
   <body>
-    <button class="allbutton button-dark">Get Started</button>
-    <button class="allbutton button-light"></button>
-    <button class="allbutton button-arrow-round">Connect With us</button>
+    <button class="button button-dark">Get Started<img alt="strilka" src="photo.button/1.png"></button>
+    <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+    <button class="button button-arrow-round">Connect With us<img alt="strilka" src="photo.button/2.png"></button>
   </body>
 </html>
