--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <title>Static Template</title>
   </head>
   <body>
-
+<header class="conteiner headerconteiner">
+  
+  <img class="logo" src="assets/1.png">
+  <nav>
+    <ul class="conteiner1">
+  <li class="headertext">Home</li>
+  <li class="headertext">About Us</li>
+  <li class="headertext">Services</li>
+  <li class="headertext">Pages</li>
+  <li class="headertext">Contact Us</li>
+</ul>
+</nav>
+</header>
   </body>
 </html>
