--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400&display=swap" rel="stylesheet">
     <title>Static Template</title>
   </head>
   <body>
-
+    <section class="our_clients">
+      <img class="client client1" src="photo.clients/1.png" alt="client:'Modern Home'">
+      <img class="client" src="photo.clients/2.png" alt="client:'BRAND'">
+      <img class="client" src="photo.clients/3.png" alt="client:'STYLEINTAGE INTERIOR'">
+      <img class="client" src="photo.clients/4.png" alt="client:'Nature Home'">
+      <img class="client" src="photo.clients/5.png" alt="client:'Classic DESIGN STUDIO'">
+    </section>
   </body>
 </html>
