--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </head>
   <body>
     <section class="our_clients">
-      <img class="client client1" src="photo.clients/1.png" alt="Modern Home">
-      <img class="client" src="photo.clients/2.png" alt="BRAND">
-      <img class="client" src="photo.clients/3.png" alt="STYLEINTAGE INTERIOR">
-      <img class="client" src="photo.clients/4.png" alt="Nature Home">
-      <img class="client" src="photo.clients/5.png" alt="Classic DESIGN STUDIO">
+      <img class="clients clients1" src="photo.clients/1.png" alt="Modern Home">
+      <img class="clients" src="photo.clients/2.png" alt="BRAND">
+      <img class="clients" src="photo.clients/3.png" alt="STYLEINTAGE INTERIOR">
+      <img class="clients" src="photo.clients/4.png" alt="Nature Home">
+      <img class="clients" src="photo.clients/5.png" alt="Classic DESIGN STUDIO">
     </section>
   </body>
 </html>
