--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400&display=swap" rel="stylesheet">
     <title>Static Template</title>
   </head>
   <body>
 <header class="conteiner headerconteiner">
   <img class="logo" src="assets/1.png">
   <nav>
-    <ul class="conteiner1">
+    <ul class="navigation-container">
   <li class="headertext">Home</li>
   <li class="headertext">About Us</li>
   <li class="headertext">Services</li>
