--- a/index.html
+++ b/index.html
@@ -28,6 +28,58 @@
     <button class="button button-dark">Get Started<img alt="strilka" src="photo.button/1.png"></button>
     <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
     <button class="button button-arrow-round">Connect With us<img alt="strilka" src="photo.button/2.png"></button>
+    <section class="container reviews-container">
+    <div class="texttitle-reviews">
+      <p>What the People Thinks</p>
+      <p>About Interno</p>
+    </div>
+    <div class="allcontainer">
+    <div class="container-LisaClairton">
+    <div class="alltitleLisaClairton">
+    <div class="titleforflex">
+      <div class="img-LisaClairton">
+      <img src="/assets/2.png" width="77px" height="77px">
+    </div>
+    <div class="titleLisaClairton">
+      <p class="text1-titleLisaClairton">Lisa Clairton</p>
+      <p class="text2-titleLisaClairton">New York, USA</p>
+    </div>
+    </div>
+    </div>
+      <p class="text3-titleLisaClairton">We selected Interno interior because of rigorous designbackground & education.</p>
+    </div>
+    <div class="container-DavidKnight">
+    <div class="alltitleDavidKnight">
+    <div class="img-DavidKnight">
+      <img src="/assets/3.png" width="77px" height="77px">
+    </div>
+    <div class="titleDavidKnigh">
+      <p class="text1-titleDavidKnight">David Knight</p>
+      <p class="text2-titleDavidKnight">Sydney, Australia</p>
+    </div>
+    </div>
+      <p class="text3-titleDavidKnight">The team exceeded our
+        <br>
+       expectations and emerged as
+        <br>
+        leaders of our project’s.</p>
+    </div>
+  
+    <div class="container-LisaClairton">
+    <div class="alltitleLisaClairton">
+    <div class="img-LisaClairton">
+      <img src="/assets/4.png" width="77px" height="77px">
+    </div>
+    <div class="titleLisaClairton">
+      <p class="text1-titleLisaClairton">Lisa Clairton</p>
+      <p class="text2-titleLisaClairton">Paris, France</p>
+    </div>
+    </div>
+      <p class="text3-titleLisaClairton">They balanced the architectural vision and the project realities beautifully.</p>
+    </div>
+  
+    </div>
+    </section>
     <footer class="container">
       <div class="ftr-block">
         <div class="ftr-card">
