--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     </nav>
     </header>
     <main>
+      <section class="banner container">
+        <h2 class="bigtext">Let's Create Your Dream Interior</h2>
+        <p class="text">The world needs innovators and problem solvers who turn challenges into greater opportunities.</p>
+        <button class="button button-dark">Get Started<img alt="strilka" src="photo.button/1.png"></button>
+      </section>
       <section class="container our_clients">
         <img class="clients client1" src="assets/photo.clients/1.png" alt="Modern Home">
         <img class="clients" src="assets/photo.clients/2.png" alt="BRAND">
@@ -33,7 +38,6 @@
         <img class="clients" src="assets/photo.clients/4.png" alt="Nature Home">
         <img class="clients" src="assets/photo.clients/5.png" alt="Classic DESIGN STUDIO">
       </section>
-      <button class="button button-dark">Get Started<img alt="strilka" src="photo.button/1.png"></button>
       <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
       <button class="button button-arrow-round">Connect With us<img alt="strilka" src="photo.button/2.png"></button>
       <div class="container">
