--- a/index.html
+++ b/index.html
@@ -64,6 +64,25 @@
           </article>
         </section>
       </div>
+      <!-- section_info -->
+      <div class="container">
+        <section class="section_info_container">
+          <article class="sctn_info_block">
+            <p class="sctn_info_block-title">We Tackle The Most Challenging Designs</p>
+            <p class="sctn_info_block-text">The world needs innovators and problem solvers who turn challenges into greater opportunities. We have</p>
+            <p class="sctn_info_block-text sctn_info_block-text-2">an insatiable curiosity about transformative trends challenging the status.</p>
+            <div class="sctn_info_card">
+              <img class="info_card-image" src="./assets/photo.section_info/button_image.png" alt="">
+              <div class="info_card-item">
+                <p class="info_card-text">012345678</p>
+                <p class="info_card-text info_card-text2">Call Us Anytime</p>
+              </div>
+            </div>
+            <button class="button button-dark button-dark-section_info">Get Free Estimate<img alt="strilka" src="photo.button/1.png"></button>
+          </article>
+          <img class="sctn_info_image" src="./assets/photo.section_info/section_info_image.png" alt="section_info_image">
+        </section>
+      </div>
     </main>
     <footer class="container">
       <div class="ftr-block">
@@ -101,3 +120,4 @@
     </footer>
   </body>
 </html>
+
