--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section class="banner container">
         <h2 class="bigtext">Let's Create Your Dream Interior</h2>
         <p class="text">The world needs innovators and problem solvers who turn challenges into greater opportunities.</p>
-        <button class="button button-dark">Get Started<img alt="strilka" src="photo.button/1.png"></button>
+        <button class="button button-dark button-dark-top">Get Started<img alt="strilka" src="photo.button/1.png"></button>
       </section>
       <section class="container our_clients">
         <img class="clients client1" src="assets/photo.clients/1.png" alt="Modern Home">
