add section with logo and with copyright

--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
     </main>
     <footer class="container">
       <div class="ftr-block">
+        <div class="ftr-logo-card">
+          <img src="assets/1.png">
+          <p class="ftr-text">We are the leading architect and interior design firm in the world.</p>
+          <a class="logo" href="http://www.facebook.com/"><img src="assets/mi_ne_slyshaly_o_thahite.png" alt="facebook"></a>
+          <a class="logo" href="http://twitter.com/?lang=ru"><img src="assets/kak_tebe_takoe_ilon_mask.png" alt="twitter"></a>
+          <a class="logo" href="http://ru.linkedin.com/"><img src="assets/htoya.png" alt="linkedin"></a>
+          <a class="logo logoIG" href="http://www.instagram.com/"><img src="assets/rabota_dlya_beremenysh_i_mam_v_dikrete.png" alt="instagram"></a>
+        </div>
         <div class="ftr-card">
           <h2>Pages</h2>
           <ul class="ftr-list">
@@ -97,6 +105,10 @@
             <li class="ftr-item">(123) 456 - 7890</li>
           </ul>
         </div>
+      </div>
+      <div class="ftr-ftr">
+        <div class="the_line"></div>
+        <p>Copyright © Interno | Designed by <span class="nikname">Victorflow</span> Templates - Powered by <span class="nikname">Webflow</span></p>
       </div>
     </footer>
   </body>
