--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
       </section>
       <button class="button button-dark">Get Started<img alt="strilka" src="photo.button/1.png"></button>
       <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
-      <button class="button button-arrow-round">Connect With us<img alt="strilka" src="photo.button/2.png"></button>
       <div class="container">
         <section class="service-block">
           <article class="service-item">
@@ -64,10 +63,17 @@
           </article>
         </section>
       </div>
+      <section class="contactUs">
+        <h2 class="Wjti">Wanna join the interno?</h2>
+        <p class="CUGaFC">Contact Us & Get a Free Consultation</p>
+        <section class="lastbutton">
+          <button class="button button-arrow-round">Connect With us<img alt="strilka" src="photo.button/2.png"></button>
+        </section>
+      </section>
     </main>
     <footer class="container">
       <div class="ftr-block">
-        <div class="ftr-logo-card">
+        <div>
           <img src="assets/1.png">
           <p class="ftr-text">We are the leading architect and interior design firm in the world.</p>
           <a class="logo" href="http://www.facebook.com/"><img src="assets/mi_ne_slyshaly_o_thahite.png" alt="facebook"></a>
@@ -106,10 +112,10 @@
           </ul>
         </div>
       </div>
-      <div class="ftr-ftr">
-        <div class="the_line"></div>
-        <p>Copyright © Interno | Designed by <span class="nikname">Victorflow</span> Templates - Powered by <span class="nikname">Webflow</span></p>
-      </div>
     </footer>
+    <div class="ftr-ftr">
+      <div class="the_line"></div>
+      <p class="copyright">Copyright © Interno | Designed by <span class="nikname">Victorflow</span> Templates - Powered by <span class="nikname">Webflow</span></p>
+    </div>
   </body>
 </html>
