finish footer again

--- a/index.html
+++ b/index.html
@@ -26,13 +26,6 @@
     </nav>
     </header>
     <main>
-      <section class="container our_clients">
-        <img class="clients client1" src="assets/photo.clients/1.png" alt="Modern Home">
-        <img class="clients" src="assets/photo.clients/2.png" alt="BRAND">
-        <img class="clients" src="assets/photo.clients/3.png" alt="STYLEINTAGE INTERIOR">
-        <img class="clients" src="assets/photo.clients/4.png" alt="Nature Home">
-        <img class="clients" src="assets/photo.clients/5.png" alt="Classic DESIGN STUDIO">
-      </section>
       <button class="button button-dark">Get Started<img alt="strilka" src="photo.button/1.png"></button>
       <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
       <div class="container">
@@ -63,6 +56,13 @@
           </article>
         </section>
       </div>
+      <section class="container our_clients">
+        <img class="clients client1" src="assets/photo.clients/1.png" alt="Modern Home">
+        <img class="clients" src="assets/photo.clients/2.png" alt="BRAND">
+        <img class="clients" src="assets/photo.clients/3.png" alt="STYLEINTAGE INTERIOR">
+        <img class="clients" src="assets/photo.clients/4.png" alt="Nature Home">
+        <img class="clients" src="assets/photo.clients/5.png" alt="Classic DESIGN STUDIO">
+      </section>
       <section class="contactUs">
         <h2 class="Wjti">Wanna join the interno?</h2>
         <p class="CUGaFC">Contact Us & Get a Free Consultation</p>
@@ -71,9 +71,9 @@
         </section>
       </section>
     </main>
-    <footer class="container">
+    <footer class="ftr container">
       <div class="ftr-block">
-        <div>
+        <div class="ftr-logo-card">
           <img src="assets/1.png">
           <p class="ftr-text">We are the leading architect and interior design firm in the world.</p>
           <a class="logo" href="http://www.facebook.com/"><img src="assets/mi_ne_slyshaly_o_thahite.png" alt="facebook"></a>
@@ -112,10 +112,10 @@
           </ul>
         </div>
       </div>
+      <div class="ftr-ftr">
+        <div class="the_line"></div>
+        <p class="copyright">Copyright © Interno | Designed by <span class="nikname">Victorflow</span> Templates - Powered by <span class="nikname">Webflow</span></p>
+      </div>
     </footer>
-    <div class="ftr-ftr">
-      <div class="the_line"></div>
-      <p class="copyright">Copyright © Interno | Designed by <span class="nikname">Victorflow</span> Templates - Powered by <span class="nikname">Webflow</span></p>
-    </div>
   </body>
 </html>
