fix problem and mozahizm

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </header>
     <main>
       <section class="banner container">
-        <h2 class="bigtext">Let's Create Your Dream Interior</h2>
-        <p class="text">The world needs innovators and problem solvers who turn challenges into greater opportunities.</p>
+        <h2 class="bigtitle">Let's Create Your Dream Interior</h2>
+        <p class="title">The world needs innovators and problem solvers who turn challenges into greater opportunities.</p>
         <button class="button button-dark button-dark-top">Get Started<img alt="strilka" src="photo.button/1.png"></button>
       </section>
       <section class="container our_clients">
