--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
         </section>
       </section>
     </main>
-    <footer class="ftr container">
+    <footer class=" container ftr">
       <div class="ftr-block">
         <div class="ftr-logo-card">
           <img src="assets/1.png">
           <p class="ftr-text">We are the leading architect and interior design firm in the world.</p>
           <a class="logo" href="http://www.facebook.com/"><img src="assets/mi_ne_slyshaly_o_thahite.png" alt="facebook"></a>
-          <a class="logo" href="http://twitter.com/?lang=ru"><img src="assets/kak_tebe_takoe_ilon_mask.png" alt="twitter"></a>
-          <a class="logo" href="http://ru.linkedin.com/"><img src="assets/htoya.png" alt="linkedin"></a>
+          <a class="logo" href="http://twitter.com/"><img src="assets/kak_tebe_takoe_ilon_mask.png" alt="twitter"></a>
+          <a class="logo" href="http://www.linkedin.com/"><img src="assets/htoya.png" alt="linkedin"></a>
           <a class="logo logoIG" href="http://www.instagram.com/"><img src="assets/rabota_dlya_beremenysh_i_mam_v_dikrete.png" alt="instagram"></a>
         </div>
         <div class="ftr-card">
