--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       <section class="contactUs">
         <h2 class="Wjti">Wanna join the interno?</h2>
         <p class="CUGaFC">Contact Us & Get a Free Consultation</p>
-        <section class="lastbutton">
+        <div class="lastbutton">
           <button class="button button-arrow-round">Connect With us<img alt="strilka" src="photo.button/2.png"></button>
-        </section>
+        </div>
       </section>
     </main>
     <footer class=" container ftr">
