--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <img class="clients" src="assets/photo.clients/4.png" alt="Nature Home">
         <img class="clients" src="assets/photo.clients/5.png" alt="Classic DESIGN STUDIO">
       </section>
-      <section class="contactUs">
+      <section class="container contactUs">
         <h2 class="Wjti">Wanna join the interno?</h2>
         <p class="CUGaFC">Contact Us & Get a Free Consultation</p>
         <div class="lastbutton">
@@ -71,7 +71,8 @@
         </div>
       </section>
     </main>
-    <footer class=" container ftr">
+    <footer>
+      <div class="container">
       <div class="ftr-block">
         <div class="ftr-logo-card">
           <img src="assets/1.png">
@@ -111,6 +112,7 @@
             <li class="ftr-item">(123) 456 - 7890</li>
           </ul>
         </div>
+      </div>
       </div>
       <div class="ftr-ftr">
         <div class="the_line"></div>
