add section recent projects

--- a/index.html
+++ b/index.html
@@ -64,6 +64,55 @@
           </article>
         </section>
       </div>
+      <!-- section_recent-projects -->
+      <section class="container sctn_recent-projects">
+        <article class="recent-projects-text">
+          <h2 class="recent-projects-text-title">Recent Projects</h2>
+          <p class="recent-projects-text-description">With tools to make every part of your process more human and a support team <br> excited to help you, getting started with us never been easier. </p>
+        </article>
+        <div class="recent-projects-block">
+          <article class="recent-projects-card">
+            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.green-photo.png" alt="">
+            <div class="recent-projects-card-text-button">
+              <div>
+                <p class="recent-projects-card-title">Winery Dry Creek Building</p>
+                <p class="recent-projects-card-subtitle">Art Modern</p>
+              </div>
+              <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+            </div>
+          </article>
+          <article class="recent-projects-card">
+            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/table-photo.png" alt="">
+            <div class="recent-projects-card-text-button">
+              <div>
+                <p class="recent-projects-card-title">Creative Workplace Design</p>
+                <p class="recent-projects-card-subtitle">Minimalist</p>
+              </div>
+              <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+            </div>
+          </article>
+          <article class="recent-projects-card">
+            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.white-photo.png" alt="">
+            <div class="recent-projects-card-text-button">
+              <div>
+                <p class="recent-projects-card-title">Bedroom Interior Pot Work</p>
+                <p class="recent-projects-card-subtitle">Modern</p>
+              </div>
+            <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+            </div>
+          </article>
+          <article class="recent-projects-card">
+            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.yellow-photo.png" alt="">
+            <div class="recent-projects-card-text-button">
+              <div>
+                <p class="recent-projects-card-title">Light Ambience Sepia Design</p>
+                <p class="recent-projects-card-subtitle">Scandinavian</p>
+              </div>
+            <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+            </div>
+          </article>
+        </div>
+      </section>
     </main>
     <footer class="container">
       <div class="ftr-block">
