--- a/index.html
+++ b/index.html
@@ -31,6 +31,52 @@
         <p class="title">The world needs innovators and problem solvers who turn challenges into greater opportunities.</p>
         <button class="button button-dark button-dark-top">Get Started<img alt="strilka" src="photo.button/1.png"></button>
       </section>
+      <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+      <div class="container">
+        <section class="service-block">
+          <article class="service-item">
+            <p class="service-item-title">Interior Design</p>
+            <p class="service-item-text srv-item-text1">Enhancing the interior to achieve a healthier environment for the people using right space.</p>
+            <div class="service-item-link">
+              <a href="">View More</a>
+              <img src="./assets/arrow_services.png" alt="arrow">
+            </div>
+          </article>
+          <article class="service-item">
+            <p class="service-item-title">Furniture</p>
+            <p class="service-item-text srv-item-text2">Movable articles that are used to make a room or building suitable for living or working.</p>
+            <div class="service-item-link">
+              <a href="">View More</a>
+              <img src="./assets/arrow_services.png" alt="arrow">
+            </div>
+          </article>
+          <article class="service-item">
+            <p class="service-item-title">Flooring</p>
+            <p class="service-item-text srv-item-text3">Thin object any finished material applied over a floor structure to provide a walking surface.</p>
+            <div class="service-item-link">
+              <a href="">View More</a>
+              <img src="./assets/arrow_services.png" alt="arrow">
+            </div>
+          </article>
+        </section>
+      </div>
+      <!-- section_info -->
+      <section class="container sctn_info_container">
+        <article class="sctn_info_block">
+          <h2 class="sctn_info_block-title">We Tackle The Most Challenging Designs</h2>
+          <p class="sctn_info_block-text">The world needs innovators and problem solvers who turn challenges into greater opportunities. We have <br> an insatiable curiosity about transformative trends challenging the status.</p>
+          <div class="sctn_info_card">
+            <button class="info_card-button"><img alt="phone" src="./assets/photo.section_info/button-image.png"></button>
+            <div class="info_card-item">
+              <p class="info_card-phone-number">012345678</p>
+              <p class="info_card-call-to-action">Call Us Anytime</p>
+            </div>
+          </div>
+          <button class="button button-dark button-dark-sctn_info">Get Free Estimate<img alt="strilka" src="photo.button/1.png"></button>
+        </article>
+        <img class="sctn_info_image" src="./assets/photo.section_info/section_info_image.png" alt="section_info_image">
+      </section>
+      <!-- section-reviews -->
       <section class="container reviews-container">
         <div class="texttitle-reviews">
           <p>What the People Thinks</p>
@@ -84,42 +130,13 @@
         
         </div>
         </section>
-      <section class="container our_clients">
+        <section class="container our_clients">
         <img class="clients client1" src="assets/photo.clients/1.png" alt="Modern Home">
         <img class="clients" src="assets/photo.clients/2.png" alt="BRAND">
         <img class="clients" src="assets/photo.clients/3.png" alt="STYLEINTAGE INTERIOR">
         <img class="clients" src="assets/photo.clients/4.png" alt="Nature Home">
         <img class="clients" src="assets/photo.clients/5.png" alt="Classic DESIGN STUDIO">
       </section>
-      <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
-      <div class="container">
-        <section class="service-block">
-          <article class="service-item">
-            <p class="service-item-title">Interior Design</p>
-            <p class="service-item-text srv-item-text1">Enhancing the interior to achieve a healthier environment for the people using right space.</p>
-            <div class="service-item-link">
-              <a href="">View More</a>
-              <img src="./assets/arrow_services.png" alt="arrow">
-            </div>
-          </article>
-          <article class="service-item">
-            <p class="service-item-title">Furniture</p>
-            <p class="service-item-text srv-item-text2">Movable articles that are used to make a room or building suitable for living or working.</p>
-            <div class="service-item-link">
-              <a href="">View More</a>
-              <img src="./assets/arrow_services.png" alt="arrow">
-            </div>
-          </article>
-          <article class="service-item">
-            <p class="service-item-title">Flooring</p>
-            <p class="service-item-text srv-item-text3">Thin object any finished material applied over a floor structure to provide a walking surface.</p>
-            <div class="service-item-link">
-              <a href="">View More</a>
-              <img src="./assets/arrow_services.png" alt="arrow">
-            </div>
-          </article>
-        </section>
-      </div>
       <!-- section_recent-projects -->
       <section class="container sctn_recent-projects">
         <article class="recent-projects-text">
@@ -168,22 +185,6 @@
             </div>
           </article>
         </div>
-      </section>
-      <!-- section_info -->
-      <section class="container sctn_info_container">
-        <article class="sctn_info_block">
-          <h2 class="sctn_info_block-title">We Tackle The Most Challenging Designs</h2>
-          <p class="sctn_info_block-text">The world needs innovators and problem solvers who turn challenges into greater opportunities. We have <br> an insatiable curiosity about transformative trends challenging the status.</p>
-          <div class="sctn_info_card">
-            <button class="info_card-button"><img alt="phone" src="./assets/photo.section_info/button-image.png"></button>
-            <div class="info_card-item">
-              <p class="info_card-phone-number">012345678</p>
-              <p class="info_card-call-to-action">Call Us Anytime</p>
-            </div>
-          </div>
-          <button class="button button-dark button-dark-sctn_info">Get Free Estimate<img alt="strilka" src="photo.button/1.png"></button>
-        </article>
-        <img class="sctn_info_image" src="./assets/photo.section_info/section_info_image.png" alt="section_info_image">
       </section>
       <section class="container contactUs">
         <h2 class="Wjti">Wanna join the interno?</h2>
