add new section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,30 @@
       <button class="button button-dark">Get Started<img alt="strilka" src="photo.button/1.png"></button>
       <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
       <button class="button button-arrow-round">Connect With us<img alt="strilka" src="photo.button/2.png"></button>
+
+      <section class="section-statistics">
+<div class="statistics-container-all">
+  <div>
+        <p class="statistics-title-text1">12</p>
+        <p class="statistics-title-text2">Years Of Experiance</p>
+      </div>
+      <div class = "vertical1"></div>
+      <div>
+        <p class="statistics-title-text1">5K</p>
+        <p class="statistics-title-text2">Success Project</p>
+      </div>
+      <div class = "vertical"></div>
+      <div>
+        <p class="statistics-title-text1">1K</p>
+        <p class="statistics-title-text2">Active Project</p>
+      </div>
+      <div class = "vertical"></div>
+      <div>
+        <p class="statistics-title-text1">4K</p>
+        <p class="statistics-title-text2">Happy Customers</p>
+      </div>
+    </div>
+      </section>
       <div class="container">
         <section class="service-block">
           <article class="service-item">
