--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
   </head>
   <body>
       <header class="container headerconteiner">
-      <img class="logo" src="assets/1.png">
-      <nav>
-        <ul class="navigation-container">
-      <li class="headertext">Home</li>
-      <li class="headertext">About Us</li>
-      <li class="headertext">Services</li>
-      <li class="headertext">Pages</li>
-      <li class="headertext">Contact Us</li>
-    </ul>
-    </nav>
+        <img class="logo" src="assets/logo.png" alt="logo">
+        <nav>
+          <ul class="navigation-container">
+            <li class="headertext">Home</li>
+            <li class="headertext">About Us</li>
+            <li class="headertext">Services</li>
+            <li class="headertext">Pages</li>
+            <li class="headertext">Contact Us</li>
+          </ul>
+        </nav>
     </header>
     <main>
       <section class="banner container">
         <h2 class="bigtitle">Let's Create Your Dream Interior</h2>
         <p class="title">The world needs innovators and problem solvers who turn challenges into greater opportunities.</p>
-        <button class="button button-dark button-dark-top">Get Started<img alt="strilka" src="photo.button/1.png"></button>
+        <button class="button button-dark button-dark-top">Get Started<img alt="strilka" src="assets/big-585goldMid-strilka.png"></button>
       </section>
       <section class="container reviews-container">
         <div class="texttitle-reviews">
@@ -40,7 +40,7 @@
           <div class="reviewer-item">
             <div class="reviewer-item__heading">
                 <div class="reviewer-item__img">
-                  <img src="/assets/2.png" width="77px" height="77px">
+                  <img src="assets/Lisa.png" width="77px" height="77px">
                 </div>
                 <div class="reviewer-item__title">
                   <p class="text-titlerewiews1">Lisa Clairton</p>
@@ -54,7 +54,7 @@
           <div class="reviewer-item">
             <div class="reviewer-item__heading">
               <div class="reviewer-item__img">
-                <img src="/assets/3.png" width="77px" height="77px">
+                <img src="assets/David.png" width="77px" height="77px">
               </div>
               <div class="reviewer-item__title">
                 <p class="text-titlerewiews1">David Knight</p>
@@ -72,7 +72,7 @@
           <div class="reviewer-item">
             <div class="reviewer-item__heading">
               <div class="reviewer-item__img">
-                <img src="/assets/4.png" width="77px" height="77px">
+                <img src="assets/lisaC.png" width="77px" height="77px">
               </div>
               <div class="reviewer-item__title">
                 <p class="text-titlerewiews1">Lisa Clairton</p>
@@ -85,13 +85,13 @@
         </div>
         </section>
       <section class="container our_clients">
-        <img class="clients client1" src="assets/photo.clients/1.png" alt="Modern Home">
-        <img class="clients" src="assets/photo.clients/2.png" alt="BRAND">
-        <img class="clients" src="assets/photo.clients/3.png" alt="STYLEINTAGE INTERIOR">
-        <img class="clients" src="assets/photo.clients/4.png" alt="Nature Home">
-        <img class="clients" src="assets/photo.clients/5.png" alt="Classic DESIGN STUDIO">
+        <img class="clients client1" src="assets/modern.png" alt="Modern Home">
+        <img class="clients" src="assets/Brand.png" alt="BRAND">
+        <img class="clients" src="assets/vs.png" alt="STYLEINTAGE INTERIOR">
+        <img class="clients" src="assets/nature.png" alt="Nature Home">
+        <img class="clients" src="assets/classic.png" alt="Classic DESIGN STUDIO">
       </section>
-      <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+      <button class="button button-light"><img alt="strilka" src="assets/small-dark-strilka.png"></button>
       <div class="container">
         <section class="service-block">
           <article class="service-item">
@@ -99,7 +99,7 @@
             <p class="service-item-text srv-item-text1">Enhancing the interior to achieve a healthier environment for the people using right space.</p>
             <div class="service-item-link">
               <a href="">View More</a>
-              <img src="./assets/arrow_services.png" alt="arrow">
+              <img src="assets/arrow_services.png" alt="arrow">
             </div>
           </article>
           <article class="service-item">
@@ -107,7 +107,7 @@
             <p class="service-item-text srv-item-text2">Movable articles that are used to make a room or building suitable for living or working.</p>
             <div class="service-item-link">
               <a href="">View More</a>
-              <img src="./assets/arrow_services.png" alt="arrow">
+              <img src="assets/arrow_services.png" alt="arrow">
             </div>
           </article>
           <article class="service-item">
@@ -115,7 +115,7 @@
             <p class="service-item-text srv-item-text3">Thin object any finished material applied over a floor structure to provide a walking surface.</p>
             <div class="service-item-link">
               <a href="">View More</a>
-              <img src="./assets/arrow_services.png" alt="arrow">
+              <img src="assets/arrow_services.png" alt="arrow">
             </div>
           </article>
         </section>
@@ -128,43 +128,43 @@
         </article>
         <div class="recent-projects-block">
           <article class="recent-projects-card">
-            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.green-photo.png" alt="">
+            <img class="recent-projects-card-image" src="assets/bed.green-photo.png" alt="">
             <div class="recent-projects-card-text-button">
               <div>
                 <p class="recent-projects-card-title">Winery Dry Creek Building</p>
                 <p class="recent-projects-card-subtitle">Art Modern</p>
               </div>
-              <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+              <button class="button button-light"><img alt="strilka" src="assets/3.png"></button>
             </div>
           </article>
           <article class="recent-projects-card">
-            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/table-photo.png" alt="">
+            <img class="recent-projects-card-image" src="assets/table-photo.png" alt="">
             <div class="recent-projects-card-text-button">
               <div>
                 <p class="recent-projects-card-title">Creative Workplace Design</p>
                 <p class="recent-projects-card-subtitle">Minimalist</p>
               </div>
-              <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+              <button class="button button-light"><img alt="strilka" src="assets/small-dark-strilka.png"></button>
             </div>
           </article>
           <article class="recent-projects-card">
-            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.white-photo.png" alt="">
+            <img class="recent-projects-card-image" src="assets/bed.white-photo.png" alt="">
             <div class="recent-projects-card-text-button">
               <div>
                 <p class="recent-projects-card-title">Bedroom Interior Pot Work</p>
                 <p class="recent-projects-card-subtitle">Modern</p>
               </div>
-            <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+            <button class="button button-light"><img alt="strilka" src="assets/small-dark-strilka.png"></button>
             </div>
           </article>
           <article class="recent-projects-card">
-            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.yellow-photo.png" alt="">
+            <img class="recent-projects-card-image" src="assets/bed.yellow-photo.png" alt="">
             <div class="recent-projects-card-text-button">
               <div>
                 <p class="recent-projects-card-title">Light Ambience Sepia Design</p>
                 <p class="recent-projects-card-subtitle">Scandinavian</p>
               </div>
-            <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+            <button class="button button-light"><img alt="strilka" src="assets/small-dark-strilka.png"></button>
             </div>
           </article>
         </div>
@@ -175,21 +175,21 @@
           <h2 class="sctn_info_block-title">We Tackle The Most Challenging Designs</h2>
           <p class="sctn_info_block-text">The world needs innovators and problem solvers who turn challenges into greater opportunities. We have <br> an insatiable curiosity about transformative trends challenging the status.</p>
           <div class="sctn_info_card">
-            <button class="info_card-button"><img alt="phone" src="./assets/photo.section_info/button-image.png"></button>
+            <button class="info_card-button"><img alt="phone" src="assets/button-image.png"></button>
             <div class="info_card-item">
               <p class="info_card-phone-number">012345678</p>
               <p class="info_card-call-to-action">Call Us Anytime</p>
             </div>
           </div>
-          <button class="button button-dark button-dark-sctn_info">Get Free Estimate<img alt="strilka" src="photo.button/1.png"></button>
+          <button class="button button-dark button-dark-sctn_info">Get Free Estimate<img alt="strilka" src="assets/big-dark-strilka.png"></button>
         </article>
-        <img class="sctn_info_image" src="./assets/photo.section_info/section_info_image.png" alt="section_info_image">
+        <img class="sctn_info_image" src="assets/section_info_image.png" alt="section_info_image">
       </section>
       <section class="container contactUs">
         <h2 class="Wjti">Wanna join the interno?</h2>
         <p class="CUGaFC">Contact Us & Get a Free Consultation</p>
         <div class="lastbutton">
-          <button class="button button-arrow-round">Connect With us<img alt="strilka" src="photo.button/2.png"></button>
+          <button class="button button-arrow-round">Connect With us<img alt="strilka" src="assets/big-dark-strilka.png"></button>
         </div>
       </section>
     </main>
@@ -197,7 +197,7 @@
       <div class="container">
       <div class="ftr-block">
         <div class="ftr-logo-card">
-          <img src="assets/1.png">
+          <img src="assets/logo.png" alt="logo">
           <p class="ftr-text">We are the leading architect and interior design firm in the world.</p>
           <a class="logo" href="http://www.facebook.com/"><img src="assets/mi_ne_slyshaly_o_thahite.png" alt="facebook"></a>
           <a class="logo" href="http://twitter.com/"><img src="assets/kak_tebe_takoe_ilon_mask.png" alt="twitter"></a>
