add new section recent blogs

--- a/index.html
+++ b/index.html
@@ -185,6 +185,48 @@
         </article>
         <img class="sctn_info_image" src="./assets/photo.section_info/section_info_image.png" alt="section_info_image">
       </section>
+<!--section recent-blogs-->
+      <section class="section-recent-blogs">
+      
+        <p class="titletext-recent-blogs1">Recent Blogs</p>
+      </br>
+        <p class="titletext-recent-blogs2">Get updates about our latest trends and techniques used in </br>interior design project works.</p>
+        <div class="recent-blogs-for_display-flex2">
+      <div class="recent-blogs-containerall">
+        <img src="/assets/recent-blogs-foto1.png" height: 296px; width: 345px; alt="bar counter">
+        <p class="text1-recent-blogs-container">Residential Interior Designer </br> In New York, USA</p>
+        <div class="recent-blogs-for_display-flex">
+        <p class="text2-recent-blogs-container">November 23, 2021</p>
+        <div class="button-recent-blogs">
+        <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+      </div>
+      </div>
+      </div>
+      <div class="recent-blogs-containerall">
+        <img src="/assets/recent-blogs-foto2.png" height: 296px; width: 345px; alt="kitchen">
+        <p class="text1-recent-blogs-container">How To Choose The Best Wall</br> Art & Decor House?</p>
+        <div class="recent-blogs-for_display-flex">
+        <p class="text2-recent-blogs-container">November 23, 2021</p>
+        <div class="button-recent-blogs">
+        <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+      </div>
+      </div>
+      </div>
+<div class="recent-blogs-containerall">
+        <img src="/assets/recent-blogs-foto3.png" height: 296px; width: 345px; alt="kitchen">
+        <p class="text1-recent-blogs-container">Tips To Increase The Interior</br> Value Of Your House</p>
+        <div class="recent-blogs-for_display-flex">
+        <p class="text2-recent-blogs-container">November 23, 2021</p>
+        <div class="button-recent-blogs">
+        <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+      </div>
+      </div>
+      </div>
+
+    </div>
+      </section>
+
+
       <section class="container contactUs">
         <h2 class="Wjti">Wanna join the interno?</h2>
         <p class="CUGaFC">Contact Us & Get a Free Consultation</p>
@@ -192,6 +234,7 @@
           <button class="button button-arrow-round">Connect With us<img alt="strilka" src="photo.button/2.png"></button>
         </div>
       </section>
+      
     </main>
     <footer>
       <div class="container">
